-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17
-
Component/s: hotspot
-
b06
Reproduce:
- configure --with-jvm-features=-compiler1 ... ; make images
For this error, we need to include runtime/abstract_vm_version.hpp
```
* For target hotspot_variant-server_libjvm_objs_vmStructs_jvmci.o:
In file included from /home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.hpp:28,
from /home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:33:
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:101:16: error: 'Abstract_VM_Version' has not been declared
static_field(Abstract_VM_Version, _features, uint64_t) \
^~~~~~~~~~~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/runtime/vmStructs.hpp:164:59: note: in definition of macro 'GENERATE_STATIC_VM_STRUCT_ENTRY'
{ QUOTE(typeName), QUOTE(fieldName), QUOTE(type), 1, 0, &typeName::fieldName },
^~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:851:3: note: in expansion of macro 'VM_STRUCTS'
VM_STRUCTS(GENERATE_NONSTATIC_VM_STRUCT_ENTRY,
^~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:768:16: error: 'VM_Version' has not been declared
static_field(VM_Version, _has_intel_jcc_erratum, bool)
^~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/runtime/vmStructs.hpp:164:59: note: in definition of macro 'GENERATE_STATIC_VM_STRUCT_ENTRY'
... (rest of output omitted)
```
For this error, we need to include runtime/vm_version.hpp
```
* For target hotspot_variant-server_libjvm_objs_vmStructs_jvmci.o:
In file included from /home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.hpp:28,
from /home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:33:
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:769:16: error: 'VM_Version' has not been declared
static_field(VM_Version, _has_intel_jcc_erratum, bool)
^~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/runtime/vmStructs.hpp:164:59: note: in definition of macro 'GENERATE_STATIC_VM_STRUCT_ENTRY'
{ QUOTE(typeName), QUOTE(fieldName), QUOTE(type), 1, 0, &typeName::fieldName },
^~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:857:3: note: in expansion of macro 'VM_STRUCTS_CPU'
VM_STRUCTS_CPU(GENERATE_NONSTATIC_VM_STRUCT_ENTRY,
^~~~~~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:777:20: error: 'VM_Version' has not been declared
declare_constant(VM_Version::CPU_CX8) \
^~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/runtime/vmStructs.hpp:275:18: note: in definition of macro 'GENERATE_VM_LONG_CONSTANT_ENTRY'
... (rest of output omitted)
```
- configure --with-jvm-features=-compiler1 ... ; make images
For this error, we need to include runtime/abstract_vm_version.hpp
```
* For target hotspot_variant-server_libjvm_objs_vmStructs_jvmci.o:
In file included from /home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.hpp:28,
from /home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:33:
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:101:16: error: 'Abstract_VM_Version' has not been declared
static_field(Abstract_VM_Version, _features, uint64_t) \
^~~~~~~~~~~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/runtime/vmStructs.hpp:164:59: note: in definition of macro 'GENERATE_STATIC_VM_STRUCT_ENTRY'
{ QUOTE(typeName), QUOTE(fieldName), QUOTE(type), 1, 0, &typeName::fieldName },
^~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:851:3: note: in expansion of macro 'VM_STRUCTS'
VM_STRUCTS(GENERATE_NONSTATIC_VM_STRUCT_ENTRY,
^~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:768:16: error: 'VM_Version' has not been declared
static_field(VM_Version, _has_intel_jcc_erratum, bool)
^~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/runtime/vmStructs.hpp:164:59: note: in definition of macro 'GENERATE_STATIC_VM_STRUCT_ENTRY'
... (rest of output omitted)
```
For this error, we need to include runtime/vm_version.hpp
```
* For target hotspot_variant-server_libjvm_objs_vmStructs_jvmci.o:
In file included from /home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.hpp:28,
from /home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:33:
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:769:16: error: 'VM_Version' has not been declared
static_field(VM_Version, _has_intel_jcc_erratum, bool)
^~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/runtime/vmStructs.hpp:164:59: note: in definition of macro 'GENERATE_STATIC_VM_STRUCT_ENTRY'
{ QUOTE(typeName), QUOTE(fieldName), QUOTE(type), 1, 0, &typeName::fieldName },
^~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:857:3: note: in expansion of macro 'VM_STRUCTS_CPU'
VM_STRUCTS_CPU(GENERATE_NONSTATIC_VM_STRUCT_ENTRY,
^~~~~~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/jvmci/vmStructs_jvmci.cpp:777:20: error: 'VM_Version' has not been declared
declare_constant(VM_Version::CPU_CX8) \
^~~~~~~~~~
/home/jvm/jiefu/docker/jdk/src/hotspot/share/runtime/vmStructs.hpp:275:18: note: in definition of macro 'GENERATE_VM_LONG_CONSTANT_ENTRY'
... (rest of output omitted)
```
- relates to
-
JDK-8258004 Remove unnecessary inclusion of vm_version.hpp
-
- Resolved
-