8259957: Build failure without C1 Compiler after JDK-8258004